resolved smell stream toList